--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
                 <div class="catalog_box_first">
                     <div class="col-7 cat-col">
                         <div class="box_catalog">
+                            <div class="absolute_box"></div>
+                            <a href="#" class="absolute_link"></a>
                             <h1 class="box_catalog_title">Каталог</h1>
                             <button class="box_catalog_button">
                                 <svg style="padding: 6px 0 0 4px" width="25" height="34" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -267,6 +269,8 @@
                     </div>
                     <div class="col-5 chemic-col">
                         <div class="box_household_chemical">
+                            <div class="absolute_box"></div>
+                            <a href="#" class="absolute_link"></a>
                             <h1 class="box_household_chemical_title">Бытовая химия</h1>
                             <div class="box_household_chemical_figure">
                                 <button class="box_household_chemical_button">
@@ -283,6 +287,8 @@
                         <div class="box_auto-clear-care">
                             <div class="col-4 auto-clear-care_col">
                                 <div class="auto-clear-care_box">
+                                    <div class="absolute_box"></div>
+                                    <a href="#" class="absolute_link"></a>
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Автохимия</h1>
                                     </div>
@@ -302,6 +308,8 @@
                             </div>
                             <div class="col-4 auto-clear-care_col">
                                 <div class="auto-clear-care_box">
+                                    <div class="absolute_box"></div>
+                                    <a href="#" class="absolute_link"></a>
                                     <div class="auto-clear-care_inner a-c-c_blue_bg">
                                         <h1 class="auto-chemical_title">Клининг</h1>
                                     </div>
@@ -317,6 +325,8 @@
                             </div>
                             <div class="col-4 auto-clear-care_col">
                                 <div class="auto-clear-care_box">
+                                    <div class="absolute_box"></div>
+                                    <a href="#" class="absolute_link"></a>
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Уход за собой</h1>
                                     </div>
@@ -334,6 +344,8 @@
                     </div>
                     <div class="col-5 pro-for-living_col">
                         <div class="pro-for-living_box">
+                            <div class="absolute_box"></div>
+                            <a href="#" class="absolute_link"></a>
                             <h1 class="pro-for-living_box_title">Продукции для гостиниц</h1>
                             <div class="pro-for-living_box_figure">
                                 <button class="pro-for-living_box_button">
