--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
                                 <a href="#" class="main_route_link">Продукция для гостиниц</a>
                                 <i class="fa-solid fa-chevron-right"></i>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
-                                <i class="fa-solid fa-chevron-right"></i>
-                            </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
-                                <i class="fa-solid fa-chevron-right"></i>
-                            </div>
                         </div>
                     </div>
                     <div class="col-7 catalog-routes_col">
@@ -116,6 +108,41 @@
                             <a href="#" class="route_link">Средства для мытья посуды</a>
                             <a href="#" class="route_link">Чистящие средства для кухни и ванной</a>
                             <a href="#" class="route_link">Стиральные порошки</a>
+                        </div>
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">2</a>
+                            <a href="#" class="route_link">2</a>
+                            <a href="#" class="route_link">2</a>
+                            <a href="#" class="route_link">2</a>
+                            <a href="#" class="route_link">2</a>
+                        </div>
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">3</a>
+                            <a href="#" class="route_link">3</a>
+                            <a href="#" class="route_link">3</a>
+                            <a href="#" class="route_link">3</a>
+                            <a href="#" class="route_link">3</a>
+                        </div>
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">4</a>
+                            <a href="#" class="route_link">4</a>
+                            <a href="#" class="route_link">4</a>
+                            <a href="#" class="route_link">4</a>
+                            <a href="#" class="route_link">4</a>
+                        </div>
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">5</a>
+                            <a href="#" class="route_link">5</a>
+                            <a href="#" class="route_link">5</a>
+                            <a href="#" class="route_link">5</a>
+                            <a href="#" class="route_link">5</a>
+                        </div>
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">6</a>
+                            <a href="#" class="route_link">6</a>
+                            <a href="#" class="route_link">6</a>
+                            <a href="#" class="route_link">6</a>
+                            <a href="#" class="route_link">6</a>
                         </div>
                     </div>
                 </div>
@@ -129,6 +156,7 @@
 </header>
 <main>
     <section class="intro_section">
+        <img src="./assets/vector/6.png" alt="vave_figure" class="vave_figure">
         <img src="assets/image/8.svg" alt="svg" class="figure">
         <div class="intro_container">
             <div class="intro_box">
