--- a/index.html
+++ b/index.html
@@ -70,86 +70,88 @@
         </div>
         <div class="navigation_wrapper">
             <div class="navigation_box">
-                <a href="#" class="nav_routes">Каталог</a>
-                <div class="catalog_popup_box">
-                    <div class="col-5 main-routes_col">
-                        <div class="popup_box_main-routes">
-                            <img src="./assets/image/13.png" alt="figure" class="popup_figure">
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Бытовая химия</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                <div class="catalog_popup">
+                    <button class="nav_routes">Каталог <i class="fa-solid fa-chevron-down"></i></button>
+                    <div class="catalog_popup_box">
+                        <div class="col-5 main-routes_col">
+                            <div class="popup_box_main-routes">
+                                <img src="./assets/image/13.png" alt="figure" class="popup_figure">
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Бытовая химия</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Профессиональный клининг</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Промышленная химия</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Автохимия</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Уход за собой</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                                <div class="main-route_box">
+                                    <button class="main_route_link">Продукция для гостиниц</button>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Профессиональный клининг</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                        <div class="col-7 catalog-routes_col">
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">Средства для пола</a>
+                                <a href="#" class="route_link">Очиститель стекол</a>
+                                <a href="#" class="route_link">Средства для мытья посуды</a>
+                                <a href="#" class="route_link">Чистящие средства для кухни и ванной</a>
+                                <a href="#" class="route_link">Стиральные порошки</a>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Промышленная химия</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">2</a>
+                                <a href="#" class="route_link">2</a>
+                                <a href="#" class="route_link">2</a>
+                                <a href="#" class="route_link">2</a>
+                                <a href="#" class="route_link">2</a>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Автохимия</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">3</a>
+                                <a href="#" class="route_link">3</a>
+                                <a href="#" class="route_link">3</a>
+                                <a href="#" class="route_link">3</a>
+                                <a href="#" class="route_link">3</a>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Уход за собой</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">4</a>
+                                <a href="#" class="route_link">4</a>
+                                <a href="#" class="route_link">4</a>
+                                <a href="#" class="route_link">4</a>
+                                <a href="#" class="route_link">4</a>
                             </div>
-                            <div class="main-route_box">
-                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
-                                <i class="fa-solid fa-chevron-right"></i>
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">5</a>
+                                <a href="#" class="route_link">5</a>
+                                <a href="#" class="route_link">5</a>
+                                <a href="#" class="route_link">5</a>
+                                <a href="#" class="route_link">5</a>
+                            </div>
+                            <div class="popup_box_routes_box">
+                                <a href="#" class="route_link">6</a>
+                                <a href="#" class="route_link">6</a>
+                                <a href="#" class="route_link">6</a>
+                                <a href="#" class="route_link">6</a>
+                                <a href="#" class="route_link">6</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-7 catalog-routes_col">
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">Средства для пола</a>
-                            <a href="#" class="route_link">Очиститель стекол</a>
-                            <a href="#" class="route_link">Средства для мытья посуды</a>
-                            <a href="#" class="route_link">Чистящие средства для кухни и ванной</a>
-                            <a href="#" class="route_link">Стиральные порошки</a>
-                        </div>
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">2</a>
-                            <a href="#" class="route_link">2</a>
-                            <a href="#" class="route_link">2</a>
-                            <a href="#" class="route_link">2</a>
-                            <a href="#" class="route_link">2</a>
-                        </div>
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">3</a>
-                            <a href="#" class="route_link">3</a>
-                            <a href="#" class="route_link">3</a>
-                            <a href="#" class="route_link">3</a>
-                            <a href="#" class="route_link">3</a>
-                        </div>
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">4</a>
-                            <a href="#" class="route_link">4</a>
-                            <a href="#" class="route_link">4</a>
-                            <a href="#" class="route_link">4</a>
-                            <a href="#" class="route_link">4</a>
-                        </div>
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">5</a>
-                            <a href="#" class="route_link">5</a>
-                            <a href="#" class="route_link">5</a>
-                            <a href="#" class="route_link">5</a>
-                            <a href="#" class="route_link">5</a>
-                        </div>
-                        <div class="popup_box_routes_box">
-                            <a href="#" class="route_link">6</a>
-                            <a href="#" class="route_link">6</a>
-                            <a href="#" class="route_link">6</a>
-                            <a href="#" class="route_link">6</a>
-                            <a href="#" class="route_link">6</a>
-                        </div>
-                    </div>
-                </div>
-                <a href="#" class="nav_routes">Акции</a>
-                <a href="#" class="nav_routes">О нас</a>
-                <a href="#" class="nav_routes">Контакты</a>
-                <a href="#" class="nav_routes">Где купить</a>
+                    </div></div>
+                <button class="nav_routes">Акции</button>
+                <button class="nav_routes">О нас</button>
+                <button class="nav_routes">Контакты</button>
+                <button class="nav_routes">Где купить</button>
+            </div>
             </div>
         </div>
     </div>
