--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="header_box_logo">
                     <div class="header_box_logo_inner">
                         <img src="assets/logo/1.png" alt="img" class="header_logo">
+                        <img src="assets/logo/1-mobile.png" alt="img" class="header_mobile_logo">
                     </div>
                     <div class="profile_box_menu">
                         <a href="#" class="profile_button">
@@ -173,27 +174,15 @@
             <div class="tabs_box">
                 <h1 class="tabs_title">Хит продаж</h1>
                 <div class="tabs_slider_wrapper">
-                    <div class="tabs_slider_box swiper mySwiper">
-                        <div class="tabs_slider_inner swiper-wrapper">
-                            <div class="slider-bar"></div>
-                            <div class="swiper-slide">
-                                <button class="button-category-none">Уход за собой</button>
-                            </div>
-                            <div class="swiper-slide">
-                                <button class="button-category-none">Автохимия</button>
-                            </div>
-                            <div class="swiper-slide">
-                                <button class="button-category-none">Промышленная химия</button>
-                            </div>
-                            <div class="swiper-slide">
-                                <button class="button-category-none">Продукция для гостиниц</button>
-                            </div>
-                            <div class="swiper-slide">
-                                <button class="button-category-none">Профессиональный клининг</button>
-                            </div>
+                    <div class="tabs_slider_box">
+                        <div class="tabs_slider_inner">
+                            <button class="button-category-none">Уход за собой</button>
+                            <button class="button-category-none">Автохимия</button>
+                            <button class="button-category-none">Промышленная химия</button>
+                            <button class="button-category-none">Продукция для гостиниц</button>
+                            <button class="button-category-none">Профессиональный клининг</button>
                         </div>
                     </div>
-                    <button class="button-category-select">Все категории</button>
                 </div>
                 <div class="navigation_position">
                     <div class="cards_slider_wrapper swiper mySecondSwiper">
