--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +30,6 @@
                 <div class="header_box_logo">
                     <div class="header_box_logo_inner">
                         <img src="assets/logo/1.png" alt="img" class="header_logo">
-                        <img src="assets/logo/1-mobile.png" alt="img" class="header_mobile_logo">
                     </div>
                     <div class="profile_box_menu">
                         <a href="#" class="profile_button">
