--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                             </div>
                         </div>
                     </div></div>
-                <button class="nav_routes">Акции</button>
-                <button class="nav_routes">О нас</button>
-                <button class="nav_routes">Контакты</button>
-                <button class="nav_routes">Где купить</button>
+                <a href="#" class="nav_routes">Акции</a>
+                <a href="./pages/AboutUs/index.html" class="nav_routes">О нас</a>
+                <a href="#" class="nav_routes">Контакты</a>
+                <a href="#" class="nav_routes">Где купить</a>
             </div>
             </div>
         </div>
