--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -210,9 +210,11 @@
         <section class="advantiges_section">
             <div class="advantiges_container">
                 <div class="advantiges_box">
-                    <h1 class="advantiges_title">
-                        ФИЛОСОФИЯ БРЕНДА FILLIGRI БАЗИРУЕТСЯ НА ПРИНЦИПАХ
-                    </h1>
+                    <div class="advantiges_box_line">
+                        <h1 class="advantiges_title">
+                            ФИЛОСОФИЯ БРЕНДА FILLIGRI БАЗИРУЕТСЯ НА ПРИНЦИПАХ
+                        </h1>
+                    </div>
                     <div class="advantiges_row">
                         <div class="col-6 advantige_col">
                             <div class="advangtige_box">
