--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 </div>
                 <div class="header_box_logo">
                     <div class="header_box_logo_inner">
+                        <a href="./index.html" class="absolute_link"></a>
                         <img src="assets/logo/1.png" alt="img" class="header_logo">
                     </div>
                     <div class="profile_box_menu">
