--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -30,6 +30,7 @@
                     </div>
                     <div class="header_box_logo">
                         <div class="header_box_logo_inner">
+                            <a href="../../index.html" class="absolute_link"></a>
                             <img src="../../assets/logo/1.png" alt="img" class="header_logo">
                         </div>
                         <div class="profile_box_menu">
@@ -151,7 +152,7 @@
                         </div></div>
                     <a href="#" class="nav_routes">Акции</a>
                     <a href="../AboutUs/index.html" class="nav_routes">О нас</a>
-                    <a href="#" class="nav_routes">Контакты</a>
+                    <a href="../Contacts/index.html" class="nav_routes">Контакты</a>
                     <a href="#" class="nav_routes">Где купить</a>
                 </div>
             </div>
