--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div></div>
                 <a href="#" class="nav_routes">Акции</a>
                 <a href="./pages/AboutUs/index.html" class="nav_routes">О нас</a>
-                <a href="#" class="nav_routes">Контакты</a>
+                <a href="./pages/Contacts/index.html" class="nav_routes">Контакты</a>
                 <a href="#" class="nav_routes">Где купить</a>
             </div>
             </div>
