--- a/pages/Contacts/index.html
+++ b/pages/Contacts/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -164,18 +164,16 @@
                 <div class="contacts_box">
                     <div class="route_box">
                         <div class="route_inner">
-                            <a href="#" class="marshrut_link">Главная</a>
+                            <a href="../../index.html" class="marshrut_link">Главная</a>
                             <i class="fa-solid fa-chevron-right"></i>
-                            <a href="#" class="marshrut_link">Личный кабинет</a>
-                            <i class="fa-solid fa-chevron-right"></i>
-                            <a href="#" class="marshrut_link">Личные данные</a>
+                            <a href="./index.html" class="marshrut_link">Контакты</a>
                         </div>
                         <h1 class="contacts_title">Контакты</h1>
                     </div>
                     <div class="socialmedia_box">
                         <div class="socialmedia_inner">
                             <a href="#" class="absolute_link"></a>
-                            <i class="fa-brands fa-vk"></i>
+                            <img src="./assets/sm/vk.svg" alt="vk" class="sm_svg">
                         </div>
                         <div class="socialmedia_inner">
                             <a href="#" class="absolute_link"></a>
@@ -195,11 +193,11 @@
                             <div class="form_box">
                                 <div class="input_box">
                                     <input type="text" class="name_input" placeholder="Имя">
-                                    <img src="./assets/vector/check.png" alt="check" class="check_input_img">
+                                    <img src="./assets/vector/check.svg" alt="check" class="check_input_img">
                                 </div>
                                 <div class="input_box">
                                     <input type="text" class="email_input" placeholder="E-mail">
-                                    <img src="./assets/vector/check.png" alt="check" class="check_input_img">
+                                    <img src="./assets/vector/check.svg" alt="check" class="check_input_img">
                                 </div>
                                 <textarea name="message" rows="10" class="message_textarea" placeholder="Напишите сообщение..."></textarea>
                                 <button class="submit_button">Отправить сообщение</button>
