--- a/pages/Contacts/index.html
+++ b/pages/Contacts/index.html
@@ -177,15 +177,15 @@
                         </div>
                         <div class="socialmedia_inner">
                             <a href="#" class="absolute_link"></a>
-                            <i class="fa-solid fa-phone"></i>
+                            <img src="./assets/sm/phone.svg" alt="phone" class="sm_svg">
                         </div>
                         <div class="socialmedia_inner">
                             <a href="#" class="absolute_link"></a>
-                            <i class="fa-brands fa-whatsapp"></i>
+                            <img src="./assets/sm/whatsapp.svg" alt="whatsapp" class="sm_svg">
                         </div>
                         <div class="socialmedia_inner">
                             <a href="#" class="absolute_link"></a>
-                            <i class="fa-brands fa-telegram"></i>
+                            <img src="./assets/sm/telegram.svg" alt="telegram" class="sm_svg">
                         </div>
                     </div>
                     <div class="contacts_form_row">
