--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -106,6 +106,7 @@
                                 </div>
                             </div>
                             <div class="col-7 catalog-routes_col">
+                                <img src="./assets/vector/10.png" alt="vector" class="circle_vector">
                                 <div class="popup_box_routes_box">
                                     <a href="#" class="route_link">Средства для пола</a>
                                     <a href="#" class="route_link">Очиститель стекол</a>
