--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                             </div>
                         </div>
                         <div class="col-7 catalog-routes_col">
+                            <img src="./assets/vector/7.png" alt="vector" class="circle_vector">
                             <div class="popup_box_routes_box">
                                 <a href="#" class="route_link">Средства для пола</a>
                                 <a href="#" class="route_link">Очиститель стекол</a>
