--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
                 <button class="login_button">Авторизация</button>
             </div>
             <div class="reg_popup_inputs">
+                <h3 class="reg_main_title">Регистрация</h3>
                 <input type="text" class="reg_name_input" placeholder="Ваше имя...">
                 <span class="error_name_text">Введите имя!</span>
                 <input type="date" class="reg_data_input" placeholder="Дата рождения - DD/MM/YYYY" onfocus="(this.type='date')" onblur="(this.type='text')" value="">
@@ -529,7 +530,7 @@
                     <span class="error_pass-again_text">Повторите пароль!</span>
                 </div>
                 <div class="reg_popup_getnews">
-                    <input type="checkbox" class="get_news_checkbox">
+                    <input checked type="checkbox" class="get_news_checkbox">
                     <span class="get_news_text">Получать спецпредложения по E-mail</span>
                 </div>
                 <div class="reg_popup_reg-button">
@@ -539,6 +540,7 @@
         </div>
         <div class="login_popup_inputs">
             <div class="login_popup_inputs_inner">
+                <h3 class="log_main_title">Авторизация</h3>
                 <input type="text" class="log_mail_input" placeholder="E-mail">
                 <span class="error-log_mail_text">Введите почту!</span>
                 <input type="text" class="log_pass_input" placeholder="пароль">
